fix: Adjust layout and visibility of map legend and weather toolbar for improved responsiveness

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -235,11 +235,17 @@
 
   @media (min-width: 640px) {
     .maplibregl-ctrl-top-left .maplibregl-ctrl {
-      margin: 7.5rem 0 0 1rem;
+      margin: 9rem 0 0 1rem;
     }
 
     .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib {
       margin-bottom: 6rem;
+    }
+  }
+
+  @media (max-width: 639px) {
+    .maplibregl-ctrl-top-left {
+      display: none;
     }
   }
 }
